--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -36,6 +36,7 @@
       position: relative !important;
       margin: 0 auto;
       width: 450px;
+      max-width: 100%;
       overflow: hidden;
     }
 
