--- a/src/styles/interactions.scss
+++ b/src/styles/interactions.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  .main,
+  .main main,
   .mobile-nav {
     transition: transform 0.3s cubic-bezier(0.19, 0.06, 0, 1.02);
   }
@@ -28,7 +28,7 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    .main,
+    .main main,
     .mobile-nav {
       transform: translateY(400px);
     }
